--- a/.gitignore
+++ b/.gitignore
@@ -549,3 +549,4 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+1_ofxSoundDevicesManager_example/bin/1_ofxSoundDevicesManager_example_debug.exp
