--- a/.gitignore
+++ b/.gitignore
@@ -560,3 +560,4 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+example/enc_temp_folder/e0a57857194caddaadd9ba5bba145e/WaveformPlot.h
