added rounded widget

--- a/.gitignore
+++ b/.gitignore
@@ -561,3 +561,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 example/enc_temp_folder/e0a57857194caddaadd9ba5bba145e/WaveformPlot.h
+example/enc_temp_folder/383651357becac8effd07e34e687a84/surfingPresets.h
